# hackerman

./: Cargo.toml  Changelog.md  README.md  README.tpl  TODO
demo/: mk.sh
demo/1/: Cargo.toml  metadata.json
demo/1/alpha/: Cargo.toml
demo/1/beta/: Cargo.toml
demo/1/bin-one/: Cargo.toml
demo/1/bin-two/: Cargo.toml
demo/1/delta/: Cargo.toml
demo/1/gamma/: Cargo.toml
demo/1/shared/: Cargo.toml
demo/10/: Cargo.toml
demo/10a/beta/: Cargo.toml
demo/2/beta/: Cargo.toml
demo/3/: metadata.json
demo/3/beta-na_me/: Cargo.toml
demo/4/: metadata.json
demo/4/alpha/: Cargo.toml
demo/4/beta/: Cargo.toml
demo/5/: Cargo.toml  metadata.json
demo/5/alpha/: Cargo.toml
demo/5/gamma/: Cargo.toml
demo/6/: Cargo.toml
demo/6/alpha/: Cargo.toml
demo/6/gamma/: Cargo.toml
demo/8/alpha/: Cargo.toml
demo/8/beta/: Cargo.toml
demo/8a/delta/: Cargo.toml
demo/8a/gamma/: Cargo.toml
demo/9/alpha/: Cargo.toml
demo/9/beta/: Cargo.toml
doc/: explain.md  hack.md  tree.md
src/: dump.rs  dupes.rs  explain.rs  feat_graph.rs  hack.rs  lib.rs  main.rs  mergetool.rs  metadata.rs  opts.rs  query.rs  source.rs  toml.rs  tree.rs
test_workspaces/10/alpha/: Cargo.toml
test_workspaces/2/: Cargo.toml  metadata.json
test_workspaces/2/alpha/: Cargo.toml
test_workspaces/3/alpha/: Cargo.toml
test_workspaces/5/beta/: Cargo.toml
test_workspaces/6/beta/: Cargo.toml
test_workspaces/7/alpha/: Cargo.toml
test_workspaces/7/beta/: Cargo.toml
test_workspaces/7/gamma/: Cargo.toml
test_workspaces/8/: Cargo.toml
