[package]
name = "cargo-hackerman"
version = "0.2.4"
edition = "2021"
description = "Workspace hack management and package/feature query"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pacak/hackerman/"
keywords = ["cargo", "features", "dependencies", "feature-unification", "visualization"]
categories = ["development-tools::cargo-plugins"]
exclude = ["TODO", "test_workspaces"]

[dependencies]
anyhow = "1.0.52"
bpaf = { version = "0.4", features = ["derive"] }
cargo-platform = "0.1"
cargo_metadata = { version = "0.14" }
dot = "0.1.4"
pathdiff = { version = "0.2", features = ["camino"] }
petgraph = "0.6.0"
semver = "1.0"
serde_json = "1.0"
target-spec = "1.0"
tempfile = { version = "3.3.0", optional = true }
toml_edit = "0.14"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", default-features = false, features = [ "alloc", "env-filter", "registry", "std", "fmt" ] }
webbrowser = { version = "0.7.1", optional = true }

[features]
spawn_xdot = ["tempfile"]
default = ["spawn_xdot"]
