[package]
name = "cargo-hackerman"
version = "0.2.6"
edition = "2021"
description = "Workspace hack management and package/feature query"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pacak/hackerman/"
keywords = ["cargo", "features", "dependencies", "feature-unification", "visualization"]
categories = ["development-tools::cargo-plugins"]
exclude = ["TODO", "test_workspaces"]

[dependencies]
anyhow = "1.0.52"
bpaf = { version = "0.9.2", features = ["derive", "autocomplete", "docgen"] }
cargo-platform = "0.1"
cargo_metadata = { version = "0.15" }
dot = "0.1.4"
pathdiff = { version = "0.2", features = ["camino"] }
petgraph = "0.6.0"
semver = "1.0"
serde_json = "1.0"
target-spec = "3.0"
tempfile = { version = "3.3.0" }
toml_edit = "0.19"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", default-features = false, features = [ "alloc", "env-filter", "registry", "std", "fmt" ] }
webbrowser = { version = "0.8.10", optional = true }


[features]
bright-color = ["bpaf/bright-color"]
default = ["dull-color"]
dull-color = ["bpaf/dull-color"]
