[package]
name = "alpha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beta = { path = "../beta/", optional = true }
gamma = { path = "../gamma/", optional = true }
delta = { path = "../delta/", optional = true }

[features]
beta = ["dep:beta"]
gamma = ["dep:gamma", "beta?/gamma"]

