[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpha = { path = "../alpha/", optional = true }
beta = { path = "../beta/", optional = true }
gamma = { path = "../gamma/", optional = true }
