[package]
name = "alpha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[target.'cfg(target_family = "unix")'.dependencies]
beta = { path = "../beta", features = ["unix"] }
[target.'cfg(target_family = "windows")'.dependencies]
beta = { path = "../beta", features = ["windows"] }

[features]
debug = ["beta/debug"]
